basic-syntax.html

--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Comprehensive Rust 🦀\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2023-02-23 09:06+0700\n"
+"PO-Revision-Date: 2023-02-23 23:11+0700\n"
 "Last-Translator: Eyem <hndrbrm@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "Language: id\n"
@@ -2290,8 +2290,8 @@ msgid ""
 "* [rust-analyzer] is a well supported LSP implementation used in major\n"
 "  IDEs and text editors."
 msgstr ""
-"Mencari sebuah crate yg bagus tidaklah mudah. Situs seperti <https://lib.rs/> dapat membantu kita "
-"dg cara membandingkan metrik crate untuk menemukan crate yang bagus dan tepercaya.\n"
+"  Mencari sebuah crate yg bagus tidaklah mudah. Situs seperti <https://lib.rs/> dapat membantu "
+"kita dg cara membandingkan metrik crate untuk menemukan crate yang bagus dan tepercaya.\n"
 "\n"
 "* [rust-analyzer] merupakan implementasi LSP yang didukung dengan baik di sebagian besar IDE dan "
 "aplikasi editor."
@@ -2306,11 +2306,12 @@ msgstr ""
 
 #: src/basic-syntax.md:1
 msgid "# Basic Syntax"
-msgstr ""
+msgstr "# Sintaks Dasar"
 
 #: src/basic-syntax.md:3
 msgid "Much of the Rust syntax will be familiar to you from C, C++ or Java:"
 msgstr ""
+"Banyak sintaks Rust akan terasa akrab bagi Anda yang sudah mengenal bahasa C, C++, atau Java:"
 
 #: src/basic-syntax.md:5
 msgid ""
@@ -2320,6 +2321,10 @@ msgid ""
 "* Keywords like `if` and `while` work the same.\n"
 "* Variable assignment is done with `=`, comparison is done with `==`."
 msgstr ""
+"* Blok dan Cakupan diawali dan diakhiri dengan kurung kurawal.\n"
+"* Komentar baris diawali dengan `//`, komentar blok diawali dengan `/*` dan diakhiri dengan `*/`.\n"
+"* Kata kunci seperti `if` dan `while` bekerja dengan cara yang sama.\n"
+"* Pengisian variabel dilakukan dengan `=`, perbandingan dilakukan dengan `==`."
 
 #: src/basic-syntax/scalar-types.md:1
 msgid "# Scalar Types"
