scalar-types.html

--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Comprehensive Rust 🦀\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2023-02-23 23:11+0700\n"
+"PO-Revision-Date: 2023-02-23 23:25+0700\n"
 "Last-Translator: Eyem <hndrbrm@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "Language: id\n"
@@ -2328,7 +2328,7 @@ msgstr ""
 
 #: src/basic-syntax/scalar-types.md:1
 msgid "# Scalar Types"
-msgstr ""
+msgstr "# Tipe Skalar"
 
 #: src/basic-syntax/scalar-types.md:3
 msgid ""
@@ -2350,10 +2350,27 @@ msgid ""
 "| Booleans               | `bool`                                     | `true`, "
 "`false`               |"
 msgstr ""
+"|                        | Tipe                                      | "
+"Literal                      |\n"
+"|------------------------|--------------------------------------------|-------------------------------|\n"
+"| Signed integer        | `i8`, `i16`, `i32`, `i64`, `i128`, `isize` | `-10`, `0`, `1_000`, "
+"`123i64` |\n"
+"| Unsigned integer      | `u8`, `u16`, `u32`, `u64`, `u128`, `usize` | `0`, `123`, "
+"`10u16`           |\n"
+"| Floating point number | `f32`, `f64`                               | `3.14`, `-10.0e20`, "
+"`2f32`    |\n"
+"| String                | `&str`                                     | `\"foo\"`, `r#\"\\\\"
+"\"#`            |\n"
+"| Unicode scalar value  | `char`                                     | `'a'`, `'α'`, "
+"`'∞'`           |\n"
+"| Byte string           | `&[u8]`                                    | `b\"abc\"`, `br#\" \" "
+"\"#`         |\n"
+"| Boolean               | `bool`                                     | `true`, "
+"`false`               |"
 
 #: src/basic-syntax/scalar-types.md:13
 msgid "The types have widths as follows:"
-msgstr ""
+msgstr "Berikut ukuran dari masing-masing tipe:"
 
 #: src/basic-syntax/scalar-types.md:15
 msgid ""
@@ -2362,6 +2379,10 @@ msgid ""
 "* `char` is 32 bit wide,\n"
 "* `bool` is 8 bit wide."
 msgstr ""
+"* Ukuran `iN`, `uN`, dan `fN` adalah _N_ bit,\n"
+"* Ukuran `isize` dan `usize` adalah ukuran sebuah pointer,\n"
+"* Ukuran `char` adalah 32 bit,\n"
+"* Ukuran `bool` adalah 8 bit."
 
 #: src/basic-syntax/compound-types.md:1
 msgid "# Compound Types"
