string-slices.html

--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Comprehensive Rust 🦀\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2023-02-28 04:45+0700\n"
+"PO-Revision-Date: 2023-03-01 08:40+0700\n"
 "Last-Translator: Eyem <hndrbrm@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "Language: id\n"
@@ -2671,7 +2671,7 @@ msgstr ""
 
 #: src/basic-syntax/string-slices.md:3
 msgid "We can now understand the two string types in Rust:"
-msgstr ""
+msgstr "Sekarang kita coba memahami dua buah tipe tulisan di Rust:"
 
 #: src/basic-syntax/string-slices.md:5
 msgid ""
@@ -2680,6 +2680,10 @@ msgid ""
 "    let s1: &str = \"World\";\n"
 "    println!(\"s1: {s1}\");"
 msgstr ""
+"```rust,editable\n"
+"fn main() {\n"
+"    let s1: &str = \"Dunia\";\n"
+"    println!(\"s1: {s1}\");"
 
 #: src/basic-syntax/string-slices.md:10
 msgid ""
@@ -2693,22 +2697,36 @@ msgid ""
 "}\n"
 "```"
 msgstr ""
+"    let mut s2: String = String::from(\"Halo \");\n"
+"    println!(\"s2: {s2}\");\n"
+"    s2.push_str(s1);\n"
+"    println!(\"s2: {s2}\");\n"
+"    \n"
+"    let s3: &str = &s2[5..];\n"
+"    println!(\"s3: {s3}\");\n"
+"}\n"
+"```"
 
 #: src/basic-syntax/string-slices.md:20
 msgid "Rust terminology:"
-msgstr ""
+msgstr "Terminologi Rust:"
 
 #: src/basic-syntax/string-slices.md:22
 msgid ""
 "* `&str` an immutable reference to a string slice.\n"
 "* `String` a mutable string buffer."
 msgstr ""
+"* `&str` adalah reference immutable dari suatu slice string.\n"
+"* `String` adalah sebuah buffer string mutable."
 
 #: src/basic-syntax/string-slices.md:27
 msgid ""
 "* `&str` introduces a string slice, which is an immutable reference to UTF-8 encoded string data \n"
 "  stored in a block of memory. String literals (`”Hello”`), are stored in the program’s binary."
 msgstr ""
+"* `&str` menyatakan sebuah slice tulisan, yg merupakan reference immutable merujuk pada suatu data "
+"tulisan UTF-8 yg tersimpan pada suatu blok memori.\n"
+"Literal tulisan (`”Hello”`), disimpan didalam tubuh program."
 
 #: src/basic-syntax/string-slices.md:30
 msgid ""
@@ -2719,6 +2737,13 @@ msgid ""
 "  creates a new empty string, to which string data can be added using the `push()` and "
 "`push_str()` methods."
 msgstr ""
+"* Tipe `String` didalam Rust merupakan wrapper dari suatu vector byte. Dimiliki dg simbol "
+"`Vec<T>`.\n"
+"\n"
+"* Mirip dg tipe yg lain, tipe `String::from()` membuat sebuah tulisah dari suatu literal; `String::"
+"new()`\n"
+"membuat sebuah tulisan kosong, dimana data tulisan dapat ditambahkan menggunakan metode `push()` "
+"dan `push_str()`."
 
 #: src/basic-syntax/string-slices.md:35
 msgid ""
@@ -2734,6 +2759,17 @@ msgid ""
 "    \n"
 "</details>"
 msgstr ""
+"* Makro `format!()` menyediakan cara mudah untuk memiliki sebuah tulisan dari suatu nilai yg "
+"dinamis.\n"
+"  Makro `format!()` menerima spesifikasi format yg sama seperti `println!()`.\n"
+"    \n"
+"* Anda bisa meminjam slice `&str` dari `String` via `&` dan mengatur batas-batasnya.\n"
+"    \n"
+"* Untuk anda programmer C++: anggap `&str` sebagai `const char*` di C++, yg selalu mengarah pada "
+"suatu tulisan yg valid di memory. `String` di Rust ekivalen dg `std::string` di C++ (perbedaannya: "
+"hanya menggunakan UTF-8 dan tidak pernah menggunakan optimisasi small-string).\n"
+"    \n"
+"</details>"
 
 #: src/basic-syntax/functions.md:1
 msgid "# Functions"
