--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Comprehensive Rust 🦀\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2023-03-01 08:40+0700\n"
+"PO-Revision-Date: 2023-03-02 03:27+0700\n"
 "Last-Translator: Eyem <hndrbrm@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "Language: id\n"
@@ -2773,13 +2773,13 @@ msgstr ""
 
 #: src/basic-syntax/functions.md:1
 msgid "# Functions"
-msgstr ""
+msgstr "# Fungsi"
 
 #: src/basic-syntax/functions.md:3
 msgid ""
 "A Rust version of the famous [FizzBuzz](https://en.wikipedia.org/wiki/Fizz_buzz) interview "
 "question:"
-msgstr ""
+msgstr "Versi Rust dari pertanyaan wawancara [FizzBuzz](https://en.wikipedia.org/wiki/Fizz_buzz):"
 
 #: src/basic-syntax/functions.md:5
 msgid ""
@@ -2788,6 +2788,10 @@ msgid ""
 "    fizzbuzz_to(20);   // Defined below, no forward declaration needed\n"
 "}"
 msgstr ""
+"```rust,editable\n"
+"fn main() {\n"
+"    fizzbuzz_to(20);   // Definisi di bawah, deklarasi tidak diperlukan\n"
+"}"
 
 #: src/basic-syntax/functions.md:10
 msgid ""
@@ -2798,6 +2802,12 @@ msgid ""
 "    lhs % rhs == 0     // The last expression in a block is the return value\n"
 "}"
 msgstr ""
+"fn is_divisible_by(lhs: u32, rhs: u32) -> bool {\n"
+"    if rhs == 0 {\n"
+"        return false;  // Kasus pojokan, kembali lebih awal\n"
+"    }\n"
+"    lhs % rhs == 0     // Ekspresi terakhir pada suatu blok adalah hasil kembaliannya\n"
+"}"
 
 #: src/basic-syntax/functions.md:17
 msgid ""
@@ -2810,6 +2820,14 @@ msgid ""
 "    }\n"
 "}"
 msgstr ""
+"fn fizzbuzz(n: u32) -> () {  // Tanpa hasil kembali artinya tipe satuannya `()`\n"
+"    match (is_divisible_by(n, 3), is_divisible_by(n, 5)) {\n"
+"        (true,  true)  => println!(“fizzbuzz”),\n"
+"        (true,  false) => println!(“fizz”),\n"
+"        (false, true)  => println!(“buzz”),\n"
+"        (false, false) => println!(“{n}”),\n"
+"    }\n"
+"}"
 
 #: src/basic-syntax/functions.md:26
 msgid ""
@@ -2820,6 +2838,12 @@ msgid ""
 "}\n"
 "```"
 msgstr ""
+"fn fizzbuzz_to(n: u32) {  // `-> ()` biasanya diabaikan\n"
+"    for i in 1..=n {\n"
+"        fizzbuzz(i);\n"
+"    }\n"
+"}\n"
+"```"
 
 #: src/basic-syntax/functions.md:35
 msgid ""
@@ -2836,10 +2860,22 @@ msgid ""
 "* The `match` expression in `fizzbuzz()` is doing a lot of work. It is expanded below to show what "
 "is happening."
 msgstr ""
+"* Di dalam fungsi `main`, kita merujuk pada sebuah fungsi yang ditulis di bawah main. Tidak "
+"diperlukan deklarasi awal atau header.\n"
+"* Parameter dideklarasikan terlebih dahulu kemudian diikuti oleh tipe (sebaliknya pada beberapa "
+"bahasa pemrograman lain), kemudian tipe kembaliannya.\n"
+"* Ekspresi terakhir dalam tubuh sebuah fungsi (atau blok) menjadi nilai kembaliannya. Cukup "
+"hilangkan `;` di akhir ekspresi.\n"
+"* Beberapa fungsi tidak memiliki nilai kembalian, dan mengembalikan ‘tipe satuan’, `()`. Kompiler "
+"akan otomatis menyimpulkan jika tipe kembalian `-> ()` tidak dituliskan.\n"
+"* Ekspresi rentang didalam perulangan `for` pada `fizzbuzz_to()` berisi `=n`, yang memasukkan "
+"batas atas.\n"
+"* Ekspresi `match` didalam `fizzbuzz()` melakukan banyak hal. Di bawah ini diperjelas untuk "
+"menunjukkan apa yang terjadi."
 
 #: src/basic-syntax/functions.md:42
 msgid "  (Type annotations added for clarity, but they can be elided.)"
-msgstr ""
+msgstr "  (Anotasi tipe ditambahkan untuk kejelasan, tetapi dapat dihilangkan.)"
 
 #: src/basic-syntax/functions.md:44
 msgid ""
