--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Comprehensive Rust 🦀\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2023-03-04 16:01+0700\n"
+"PO-Revision-Date: 2023-03-04 16:13+0700\n"
 "Last-Translator: Eyem <hndrbrm@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "Language: id\n"
@@ -2967,11 +2967,11 @@ msgstr "* Kita akan melihat lebih banyak Metode dalam latihan hari ini dan besok
 
 #: src/basic-syntax/functions-interlude.md:1
 msgid "# Function Overloading"
-msgstr ""
+msgstr "# Overloading Fungsi"
 
 #: src/basic-syntax/functions-interlude.md:3
 msgid "Overloading is not supported:"
-msgstr ""
+msgstr "Overloading tidak didukung:"
 
 #: src/basic-syntax/functions-interlude.md:5
 msgid ""
@@ -2982,10 +2982,16 @@ msgid ""
 "  * All call sites have the same number of arguments.\n"
 "  * Macros are sometimes used as an alternative."
 msgstr ""
+"* Tiap fungsi hanya boleh memiliki satu buah implementasi:\n"
+"  * Selalu menggunakan jumlah parameter yg tetap.\n"
+"  * Selalu menggunakan tipe parameter yg sama.\n"
+"* Nilai Default tidak didukung:\n"
+"  * Semua pemanggilan memiliki jumlah argumen yg sama.\n"
+"  * Penggunaan Makro kadang dijadikan sebagai alternatif pilihan."
 
 #: src/basic-syntax/functions-interlude.md:12
 msgid "However, function parameters can be generic:"
-msgstr ""
+msgstr "Tetapi, parameter fungsi boleh generik:"
 
 #: src/basic-syntax/functions-interlude.md:14
 msgid ""
@@ -2994,6 +3000,10 @@ msgid ""
 "    if std::process::id() % 2 == 0 { a } else { b }\n"
 "}"
 msgstr ""
+"```rust,editable\n"
+"fn pilih_salah_satu<T>(a: T, b: T) -> T {\n"
+"    if std::process::id() % 2 == 0 { a } else { b }\n"
+"}"
 
 #: src/basic-syntax/functions-interlude.md:19
 msgid ""
@@ -3003,12 +3013,20 @@ msgid ""
 "}\n"
 "```"
 msgstr ""
+"fn main() {\n"
+"    println!(\"lempar koin: {}\", pilih_salah_satu(\"atas\", \"bawah\"));\n"
+"    println!(\"hadiah uang: {}\", pilih_salah_satu(500, 1000));\n"
+"}\n"
+"```"
 
 #: src/basic-syntax/functions-interlude.md:27
 msgid ""
 "* When using generics, the standard library's `Into<T>` can provide a kind of limited\n"
 "  polymorphism on argument types. We will see more details in a later section."
 msgstr ""
+"* Ketika menggunakan generik, pustaka standar `Into<T>` dapat memberikan semacam polimorfisme pada "
+"tipe argumen.\n"
+"  Kita akan bahas lebih detail mengenai hal ini di bab selanjutnya."
 
 #: src/basic-syntax/functions-interlude.md:30
 msgid "</defails>"
